--- a/LanZhouBeefNoodles/Views/Shared/_Layout.cshtml
+++ b/LanZhouBeefNoodles/Views/Shared/_Layout.cshtml
@@ -4,10 +4,26 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>使用模板 @ViewBag.Title</title>
-    <link href="~/lib/bootstrap/css" rel="stylesheet" />
-    <link href="~/content/site.css" rel="stylesheet" />
+    @*    <link href="~/lib/bootstrap/css" rel="stylesheet" />
+        <link href="~/content/site.css" rel="stylesheet" />*@
+    <link href="~/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/content/site.css" />
 </head>
 <body>
+    @* ---- ---- ---  导航start  ---- ---- ----*@
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a asp-controller="Home" asp-action="Index" class="navbar-brand">正宗兰州拉面</a></li>
+                    <li><a asp-controller="Feedback" asp-action="Index">意见反馈</a></li>
+                    @*<partial name="_loginPartial">*@
+                </ul>
+            </div>
+        </div>
+    </nav>
+    @* ---- ---- ---  导航end  ---- ---- ----*@
+
     <div class="container body-content">
         <div class="row">
             @RenderBody()
